# ember

./: .gitignore  README.md  audio.py  chat.py  main.py  pyproject.toml
models/: en_US-amy-low.onnx
pkg/proto/: assistant_pb2.py  assistant_pb2_grpc.py
